--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,17 +1,33 @@
 .flex{
     display: flex;
+    width: 60%;
+    margin: auto;
+}
+.container {
+    border: 5px solid red;
+    display: grid;
+     grid-template-columns: repeat(2,1fr);
+    
+   
 }
 .eachdiv{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2);
-    width: 30%;
-    border: 1px solid red;
+ display: flex;
+  /* width: 40%; */
+border: 2px solid rgb(0, 255, 8);
+}
+
+.imgdiv{
+width: 30%;
+}
+.content {
+    width: 65%;
 }
 img{
-    width: 30%;
-    height: 150px;
+width: 100%;
+height: 90%;  
 }
-.conten{
-width: 70%;
+
+button{
+    float: right;
+    text-decoration: none;
 }
